--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,5 +36,6 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="back_text">#A0001E2C</color>
+    <color name="delete_color">#9C2424</color>
 </resources>
 
