--- a/app/src/main/res/navigation/nav_grav.xml
+++ b/app/src/main/res/navigation/nav_grav.xml
@@ -25,6 +25,9 @@
             app:destination="@id/mealsFragment"
 
              />
+        <action
+            android:id="@+id/action_homeF_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/showAllFragment"
