--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -55,5 +55,22 @@
         app:layout_constraintEnd_toEndOf="parent"
 
      />
+    <include
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@+id/tile_of_list_favourite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/network_error"/>
+
+    <include
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@+id/tile_of_list_favourite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/loading"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
