--- a/app/src/main/res/layout/fragment_planned_meals.xml
+++ b/app/src/main/res/layout/fragment_planned_meals.xml
@@ -120,5 +120,22 @@
         app:layout_constraintTop_toBottomOf="@+id/lottie_animation_planned"
 
         />
+    <include
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/tile_of_list_planned_meals"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/network_error"/>
+
+    <include
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/tile_of_list_planned_meals"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/loading"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
